--- a/blocks/button-edit/button-edit.css
+++ b/blocks/button-edit/button-edit.css
@@ -7,5 +7,9 @@
     border-radius: 0;
     background: #000;
     min-width: 24px;
-    min-height: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
