сохранение перед новой файловой структурой

--- a/pages/index.css
+++ b/pages/index.css
@@ -19,3 +19,7 @@
 
 @import url(../blocks/button-plus/button-plus.css);
 @import url(../blocks/button-plus/__plus/button-plus__plus.css);
+
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__list/elements__list.css);
+@import url(../blocks/elements/__list-item.css/elements__list-item.css);
