--- a/blocks/button-edit/button-edit.css
+++ b/blocks/button-edit/button-edit.css
@@ -6,6 +6,9 @@
     border: 1px solid #FFF;
     border-radius: 0;
     background: #000;
+    background-image: url(../../images/pen.svg);
+    background-position: center;
+    background-repeat: no-repeat;
     min-width: 24px;
     height: 24px;
     display: flex;
