--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,6 +1,7 @@
 .elements__list {
     display: grid;
     padding: 0;
+    margin: 0;
     list-style-type: none;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -13,12 +14,10 @@
 @media screen and (max-width: 1279px) {
     .elements__list {
         grid-template-columns: repeat(2, 1fr);
-        max-width: 582px;
     }
 }
 @media screen and (max-width: 767px) {
     .elements__list {
         grid-template-columns: repeat(1, 1fr);
-        max-width: 582px;
     }
 }
