--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,4 +1,8 @@
 .elements {
     margin: 0;
     max-width: 880px;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
