--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,8 @@
 .header {
     margin: 0;
+    padding-top: 45px;
+    box-sizing: border-box;
+    width: 880px;
     border-bottom: 1px solid #545454;
+
 }
