--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,5 +1,6 @@
 .logo {
     margin: 0;
+    padding-bottom: 41px;
     background-position: center;
     background-size: contain;
     width: 142px;
