--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,8 @@
 
 @import url(../blocks/header/header.css);
 
+@import url(../blocks/logo/logo.css);
+
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
@@ -22,4 +24,16 @@
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__list/elements__list.css);
-@import url(../blocks/elements/__list-item.css/elements__list-item.css);
+
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__photo/element__photo.css);
+@import url(../blocks/element/__row/element__row.css);
+@import url(../blocks/element/__text/element__text.css);
+
+@import url(../blocks/button-like/button-like.css);
+
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__text/footer__text.css);
+
+@import url(../blocks/focus/focus.css);
