--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,3 +6,9 @@
     flex-direction: column;
     align-items: center;
 }
+@media screen and (max-width: 1279) {
+    .elements{
+        max-width: 582px;
+    }
+    
+}
