--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,14 @@
 .footer {
-    width: 880px;
+    max-width: 880px;
     padding: 67px 200px 60px;
+    align-self: flex-start;
 }
+@media screen and (max-width: 1279px) {
+    .footer {
+        max-width: 282px;
+        padding: 48px 19px 36px;
+    }
+}
+
+
+    
