--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,18 @@
 .header {
     margin: 0;
+    min-width: 880px;
     padding-top: 45px;
     box-sizing: border-box;
-    width: 880px;
+    max-width: 880px;
     border-bottom: 1px solid #545454;
 
+
+}
+
+@media screen and (max-width: 1279px) {
+    .header {
+        align-self: stretch;
+        min-width: 100%;
+
+    }
 }
