--- a/blocks/profile/__column/profile__column.css
+++ b/blocks/profile/__column/profile__column.css
@@ -1,5 +1,12 @@
-.profile__column{
+.profile__column {
     margin: 0;
     display: flex;
     flex-direction: row;
+}
+@media screen and (max-width: 1279px) {
+    .profile__column {
+            flex-direction: column;
+            align-items: center;
+            
+    }
 }
