--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,8 +1,15 @@
 .profile {
-    min-width: 880px;
+    /* min-width: 880px; */
     padding-top: 40px;
     height: 120px;
     display: flex;
     justify-content: space-between;
-    
+}
+
+@media screen and (max-width: 1279px) {
+    .profile {
+        height: 286px;
+        flex-direction: column;
+        align-items: center;
+    }
 }
