--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -5,3 +5,17 @@
     line-height: 22px;
     color: #545454;
 }
+
+@media screen and (max-width: 1279px) {
+    .footer__text {
+
+        font-size: 14px;
+
+        line-height: 17px;
+        letter-spacing: 0em;
+        text-align: left;
+
+
+
+    }
+}
