--- a/blocks/profile/__column/profile__column.css
+++ b/blocks/profile/__column/profile__column.css
@@ -7,6 +7,7 @@
     .profile__column {
             flex-direction: column;
             align-items: center;
+            justify-content: start;
             
     }
 }
