--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,3 +5,14 @@
     flex-direction: column;
     align-items: flex-start;
 }
+@media screen and (max-width: 1279px) {
+    .profile__info {
+        padding-left: 0;
+
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+        
+            
+    }
+}
