--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,11 @@
 @import url(../blocks/footer/__text/footer__text.css);
 
 @import url(../blocks/focus/focus.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__edit/popup__edit.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__button/popup__button.css);
