--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -2,5 +2,11 @@
     margin: 0;
     display: flex;
     flex-direction: column;
+    align-self: flex-end;
     margin-bottom: 30px;
 }
+.popup__field:last-of-type {
+    margin-bottom: 48px;
+}
+
+
