--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -7,7 +7,14 @@
     box-sizing: border-box;
     padding: 34px 36px 37px;
     position: relative;
+    z-index: 1;
 
     box-shadow: 0px 0px 25px 0px #00000026;
+}
 
+@media screen and (max-width: 1279px) {
+    .popup__form {
+        max-width: 282px;
+        padding: 25px 22px;
+    }
 }
