--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,25 @@
 .popup__title {
-    margin: 0;
     color: #000;
+    padding: 0;
+
     font-size: 24px;
     font-style: normal;
     font-weight: 900;
     line-height: 29px;
     letter-spacing: 0em;
     text-align: left;
-    margin-bottom: 54px;
+    margin: 0 0 54px;
 
 
     /* align-self: flex-start; */
 
+}
+
+@media screen and (max-width: 1279px) {
+    .popup__title {
+        font-size: 18px;
+        line-height: 22px;
+        margin: 0 0 75px;
+
+    }
 }
