--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,9 +2,10 @@
     margin: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     position: fixed;
     align-items: center;
     justify-content: center;
     /* opacity: 0.5; */
+    z-index: 1;
 }
