--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,6 +6,5 @@
     position: fixed;
     align-items: center;
     justify-content: center;
-    /* opacity: 0.5; */
-    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
 }
