try-2(fix-adaptive)

--- a/blocks/button-edit/button-edit.css
+++ b/blocks/button-edit/button-edit.css
@@ -16,3 +16,10 @@
   justify-content: center;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1279px) {
+  .button-edit {
+    min-width: 18px;
+    height: 18px;
+  }
+}
