изменения ховеров кнопок

--- a/blocks/button-edit/button-edit.css
+++ b/blocks/button-edit/button-edit.css
@@ -15,6 +15,11 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  opacity: 1;
+  transition: opacity .4s linear;
+}
+.button-edit:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 1279px) {
