--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
   padding-top: 45px;
   box-sizing: border-box;
   max-width: 880px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media screen and (max-width: 1279px) {
