--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -9,7 +9,12 @@
   top: -50px;
   right: -50px;
   background-color: transparent;
-
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity .4s ease;
+}
+.popup__button-close:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 1279px) {
