--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -11,6 +11,12 @@
   letter-spacing: 0em;
   text-align: center;
   cursor: pointer;
+  opacity: 1;
+  transition: opacity .4s ease;
+}
+
+.popup__button:hover {
+  opacity: .8;
 }
 
 @media screen and (max-width: 1279px) {
