--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 1279) {
+@media screen and (max-width: 1279px) {
   .elements {
     padding-top: 36px;
     max-width: 582px;
