--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -7,8 +7,8 @@
 }
 
 @media screen and (max-width: 1279px) {
-  .header {
-    width: 104;
-    padding: 28px 0 31px 27px;
+  .logo {
+    width: 104px;
+    padding: 0 0 31px 27px;
   }
 }
