--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -9,3 +9,8 @@
 .popup__field:last-of-type {
   margin-bottom: 48px;
 }
+@media screen and (max-width: 1279px) {
+  .popup__field:last-of-type {
+    margin-bottom: 45px;
+  }
+}
