--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -1,4 +1,4 @@
-.button-like {
+.element__button-like {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -11,18 +11,18 @@
   justify-content: center;
   cursor: pointer;
   background-color: transparent;
-  background-image: url(../../images/like.svg);
+  background-image: url(../../../images/like.svg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 1;
   transition: opacity .4s ease;
 }
-.button-like:hover {
+.element__button-like:hover {
   opacity: .5;
 }
 
-.button-like:active {
+.element__button-like:active {
   opacity: 1;
-  background-image: url(../../images/like-active.svg);
+  background-image: url(../../../images/like-active.svg);
 }
