--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -7,7 +7,9 @@
   box-sizing: border-box;
   padding: 34px 36px 37px;
   position: relative;
-  box-shadow: 0px 0px 25px 0px #00000026;
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
+
+
 }
 
 @media screen and (max-width: 1279px) {
