--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -18,7 +18,10 @@
 .popup__button:hover {
   opacity: .8;
 }
-
+.popup__button:invalid {
+  background: #FFF;
+  border: 1px solid red;
+}
 @media screen and (max-width: 1279px) {
   .popup__button {
     width: 238px;
