--- a/src/blocks/popup/__error/_active/popup__error_active.css
+++ b/src/blocks/popup/__error/_active/popup__error_active.css
@@ -1,4 +1,4 @@
-.popup__error {
+.popup__erroe_active {
   margin-top: 5px;
   font-family: Inter;
   font-size: 12px;
@@ -8,7 +8,7 @@
   letter-spacing: 0em;
   text-align: left;
   color: #FF0000;
-  min-height: 12px;
-  margin-bottom: 13px;
+  max-height: 24px;
+
 
 }
