--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -41,3 +41,4 @@
 @import url(../blocks/popup/__button/_disabled/popup__butoon_disabled.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_active/popup__error_active.css);
