--- a/main.css
+++ b/main.css
@@ -444,6 +444,7 @@ template {
   position: relative;
   width: 120px;
   height: 120px;
+  background-image: none;
   border-radius: 50%;
   background-size: cover;
   border: none;
