--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 120px;
   height: 120px;
+  background-image: none;
   border-radius: 50%;
   background-size: cover;
   border: none;
